# Model-Deployment-Spaceship_Titanic_pipeline

./: README.md
asg5-md/: README.md  pyproject.toml  requirements.txt  setup.py
asg5-md/app/: app_streamline.py
asg5-md/artifacts/: pipeline.pkl
asg5-md/src/data/: data_ingestion.py
asg5-md/src/features/: preprocessing.py
asg5-md/src/models/: data_evaluation.py  data_train.py
asg5-md/src/pipelines/: data_pipeline.py
asg5-md/src/spaceship_titanic_md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
