[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceship-titanic-md"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "streamlit>=1.30"
]

[tool.setuptools.packages.find]
where = ["src"]